--- a/www/index.html
+++ b/www/index.html
@@ -49,5 +49,39 @@
 			<h2 class="b-slogan">Neque porro quisquam est qui dolorem ipsum quia dolor sit amet consectetur adipisci velit..."</h2>
 		</div>
 	</div>
+	<div class="l-footer">
+		<ul class="b-menu b-menu-footer">
+			<li class="b-menu-item active">
+				<span class="b-menu-item-link">Home</span>
+			</li>
+			<li class="b-menu-item">
+				<a href="#" class="b-menu-item-link">About Us</a>
+			</li>
+			<li class="b-menu-item">
+				<a href="#" class="b-menu-item-link">Support</a>
+			</li>
+			<li class="b-menu-item">
+				<a href="#" class="b-menu-item-link">Forum</a>
+			</li>
+			<li class="b-menu-item">
+				<a href="#" class="b-menu-item-link">Development</a>
+			</li>
+			<li class="b-menu-item">
+				<a href="#" class="b-menu-item-link">Contact Us</a>
+			</li>
+		</ul>
+		<p class="b-copyright">&copy; Copyright Infirmation Goes Here. All Rights Reserved</p>
+		<p class="b-designby">
+			Design by: <a href="http://templateworld.com" class="b-designby-link">Templateworld</a>
+		</p>
+		<div class="b-valid">
+			<p class="b-valid-field g-button">
+				<a href="#" class="b-valid-link g-button-in">xhtml</a>
+			</p>
+			<p class="b-valid-field g-button">
+				<a href="#" class="b-valid-link g-button-in">css</a>
+			</p>
+		</div>
+	</div>
 </body>
 </html>
