--- a/www/index.html
+++ b/www/index.html
@@ -49,6 +49,78 @@
 			<h2 class="b-slogan">Neque porro quisquam est qui dolorem ipsum quia dolor sit amet consectetur adipisci velit..."</h2>
 		</div>
 	</div>
+	<div class="l-content">
+		<div class="h-sidebar">
+			<div class="h-sidebar-top">
+				<div class="h-sidebar-bottom">
+					<div class="b-photo">
+						<h3 class="b-photo-header g-sidebar-header">Photo Stock</h3>
+						<ul class="b-photo-list">
+							<li class="b-photo-list-item">
+								<a href="#" class="b-photo-list-item-href">
+									<img src="images/image1.jpg" alt="" class="b-photo-list-item-image" />view large
+								</a>
+							</li>
+							<li class="b-photo-list-item">
+								<a href="#" class="b-photo-list-item-href">
+									<img src="images/image2.jpg" alt="" class="b-photo-list-item-image" />view large
+								</a>
+							</li>
+							<li class="b-photo-list-item">
+								<a href="#" class="b-photo-list-item-href">
+									<img src="images/image3.jpg" alt="" class="b-photo-list-item-image" />view large
+								</a>
+							</li>
+						</ul>
+					</div>
+					<div class="b-qcontact">
+						<h3 class="b-qcontact-header g-sidebar-header">Quick Contact</h3>
+						<form action="#" method="post" class="b-qcontact-form">
+							<p class="b-qcontact-field">
+								<label for="" class="b-qcontact-field-name">Name</label>
+								<input type="text" class="b-qcontact-field-input" name="name" value="- enter your name -" />
+							</p>
+							<p class="b-qcontact-field">
+								<label for="" class="b-qcontact-field-name">Email</label>
+								<input type="text" class="b-qcontact-field-input" name="email" value="- enter your email -" />
+							</p>
+							<div class="b-qcontact-buttons">
+								<p class="b-qcontact-fiebut g-button">
+									<input type="button" class="b-qcontact-button g-button-in" name="quote" value="Need a Quote?" />
+								</p>
+								<p class="b-qcontact-fiebut g-button">
+									<input type="submit" class="b-qcontact-button g-button-in" name="submit" value="Submit" />
+								</p>
+							</div>
+						</form>
+					</div>
+					<div class="b-projects">
+						<h3 class="b-projects-header g-sidebar-header">Projects Link</h3>
+						<ul class="b-projects-list">
+							<li class="b-projects-list-item active">
+								<span class="b-projects-list-link">Lorem ipsum dolor sit amet eros consequat</span>
+							</li>
+							<li class="b-projects-list-item">
+								<a href="#" class="b-projects-list-link">Consectetuer adipiscing elit</a>
+							</li>
+							<li class="b-projects-list-item">
+								<a href="#" class="b-projects-list-link">Etiam quis est ut diam viverra rhoncus</a>
+							</li>
+							<li class="b-projects-list-item">
+								<a href="#" class="b-projects-list-link">Fusce eros consequat</a>
+							</li>
+							<li class="b-projects-list-item">
+								<a href="#" class="b-projects-list-link">Cras eros massa blandit</a>
+							</li>
+							<li class="b-projects-list-item">
+								<a href="#" class="b-projects-list-link">Aoreet utdiam viverra</a>
+							</li>
+						</ul>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
 	<div class="l-footer">
 		<ul class="b-menu b-menu-footer">
 			<li class="b-menu-item active">
