--- a/www/index.html
+++ b/www/index.html
@@ -120,6 +120,56 @@
 				</div>
 			</div>
 		</div>
+		<div class="h-content">
+			<div class="b-article">
+				<h3 class="b-article-h1">Somelines About Us</h3>
+				<h4 class="b-article-h2">ltrices inh endrerit ac tempor idtellus uis quam uisque</h4>
+				<p class="b-article-text"><strong>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Nulla libero leo, suscipit acfaucibusnon.</strong> Etiam est. Etiam ac ipsum sed pede ultricies pretium. Nulla mi lacus, fringilla eu, pulvinar at, commodo eu, dolor. Nam porttitor viverra sapien. Pellentesque vitae augue et lorem laoreet .</p>
+				<div class="b-article-date-more">
+					<p class="b-article-date">Saturday, April 26, 2008</p>
+					<p class="b-article-more">
+						<a href="#" class="b-article-more-link">Read more</a>
+					</p>
+				</div>
+			</div>
+			<div class="b-services">
+				<h3 class="b-services-header">Our Spectrum of Services</h3>
+				<p class="b-frame">
+					<a href="#" class="b-frame-link">
+						<img src="images/frame_img.jpg" alt="" class="b-frame-link-img" />
+						Cras turpis duis at sapien eget nulla vulputate.
+					</a>
+				</p>
+				<div class="b-services-text">
+					<p><strong>Donec accumsan porta risus.</strong> Vestibulum sollicitudinlibero ut semper commodo, purus enim sollicitudin nulla, dictum vehicula diam lacus at purus. In egestas.</p>
+					<dl class="b-dlist">
+						<dt class="b-dlist-item">Services</dt>
+						<dd class="b-dlist-desc g-nobg">
+							<a href="#" class="b-dlist-desc-link">Nam congue quam non augue ivamus porttitor</a>
+						</dd>
+						<dd class="b-dlist-desc">
+							<a href="#" class="b-dlist-desc-link">Jam aongue buam n augue famus</a>
+						</dd>
+					</dl>
+					<p><strong>Pellentesque dolor.</strong> Nunc congue est in ante mattis ultrices. liquam erat volutpat. Nam congue quam non augue. </p>
+				</div>
+			</div>
+			<div class="b-blockquote">
+				<h3 class="b-blockquote-header">Testimonial</h3>
+				<blockquote>
+					<p><strong>Nullam vel justo. Mauris viverra mattis neque. Phasellus feugiat pede ut mauris uis orcies tibulum</strong> eleifend. Donec est purusiaculis acauctorNullam vel justo. Mauris viverra mattis neque. Phasellus feugiat pede ut mauris. Duis orci.</p>
+				</blockquote>
+				<p class="b-blockquote-author">by
+					<a href="#" class="b-blockquote-author-link">David Jackson</a>
+				</p>
+				<blockquote>
+					<p><strong>Vel justo. Mauris viverra mattis neque  asellus feugiat pede ut mauris uis orcies tibulum</strong> eleifend. Donec est purusiaculis acauctorNullam vel justo. Mauris viverra mattis neque. Phasellus feugiat pede ut mauris.</p>
+				</blockquote>
+				<p class="b-blockquote-author">by
+					<a href="#" class="b-blockquote-author-link">Tom Sam</a>
+				</p>
+			</div>
+		</div>
 	</div>
 	<div class="l-footer">
 		<ul class="b-menu b-menu-footer">
